--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,8 +18,7 @@
 	  Hello World!
 </div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2021</h4>
-  </div>
+<h4> <a href ="aboutme.html">About Me</a> |<a href="mailto:gibsbenh9690@granitesd.org">Send Email</a>| Copyright 2022</h4>  </div>
 </div>
 </body>
 </html>
