--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="interest/index.html">Football</a> </h3>
   </div>
   <div class="content">
-	  Hello World!
-</div>
+
+	</div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2021</h4>
-  </div>
+<h4> <a href ="aboutme.html">About Me</a> |<a href="mailto:gibsbenh9690@granitesd.org">Send Email</a>| Copyright 2022</h4>  </div>
 </div>
 </body>
 </html>
