--- a/ecs/index.html
+++ b/ecs/index.html
@@ -12,20 +12,14 @@
   	<h1>ECS Project</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../insterest/index.html">Football</a> </h3>
+    <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../insterest/index.html">Football</a> | </h3>
   </div>
   <div class="content">
-	  Hello World!
+	 
+	  
 </div>
   <div class="footer">
 <h4> <a href ="aboutme.html">About Me</a> |<a href="mailto:gibsbenh9690@granitesd.org">Send Email</a>| Copyright 2022</h4>  </div>
 </div>
 </body>
 </html>
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-
