--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   	<h1>Jack Benham's Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="interest/index.html">Football</a> </h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="interest/index.html">Football</a> | </h3>
   </div>
   <div class="content">
-
+	<img src="images/welcome.jpg" alt="Welcome" width="960" height="500">
 	</div>
   <div class="footer">
 <h4> <a href ="aboutme.html">About Me</a> |<a href="mailto:gibsbenh9690@granitesd.org">Send Email</a>| Copyright 2022</h4>  </div>
