--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Jack Benham's Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="interest/index.html">Football</a> | </h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="interest/index.html">Football</a> </h3>
   </div>
   <div class="content">
 	<img src="GitHubthing.jpg" alt="Welcome" width="960" height="500">
