--- a/interest/index.html
+++ b/interest/index.html
@@ -15,7 +15,8 @@
     <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Football</a> </h3>
   </div>
   <div class="content">
-	  
+	  One of my favorite activtys is football. It gets you in shape and is a good time with friends. I have met many friends through football and am
+	  still meeting new people. That is why it is such a good activity for all.
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
