--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="interest/index.html">Football</a> </h3>
   </div>
   <div class="content">
-	<img src="GitHubthing.jpg"  width="960" height="500">
+	<img src="images/GitHubthing.jpg" alt="Welcome"  width="960" height="500">
 	</div>
   <div class="footer">
 <h4> <a href ="aboutme.html">About Me</a> |<a href="mailto:gibsbenh9690@granitesd.org">Send Email</a>| Copyright 2022</h4>  </div>
