--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,7 +15,7 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../interest/index.html">Football</a>  </h3>
   </div>
   <div class="content">
-	 <a href="file:///Users/9690687/Downloads/Intelligence%20vs%20Artificial%20Intelligence.pdf">link text</a>
+<a href="file:///Users/9690687/Downloads/Intelligence%20vs%20Artificial%20Intelligence.pdf">Vist Intelligence vs Artificail Intelligence Slide Show</a>
 
 	  
 </div>
